--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         frameworkUrl: buildUrl + "/WebGL.framework.js",
         codeUrl: buildUrl + "/WebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "Yaromesky",
+        companyName: "DefaultCompany",
         productName: "Minesweeper",
         productVersion: "1.0",
         showBanner: unityShowBanner,
